# Music-Library-Analysis

./: .gitignore  pyproject.toml
music_library_analysis/: mla.py
music_library_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
music_library_analysis/metadata/: GetSongMetadata.py
music_library_analysis/model/: Song.py  mlamp3.py
tests/: test_mla.py
