[tool.poetry]
name = "music-library-analysis"
version = "0.1.0"
description = ""
authors = ["Amundeep Singh <amundeep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
