[tool.poetry]
name = "music-library-analysis"
version = "0.1.0"
description = ""
authors = ["Amundeep Singh <amundeep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
eyed3 = "^0.9.5"
schema = "^0.7.2"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
